--- a/index.html
+++ b/index.html
@@ -23,395 +23,54 @@
 </head>
 
 <body>
+    <section>
+        <img src=" " alt="image description">
+        <p>Texto</p>
+        <form action="submit-form.php" method="post">
+            <label for="Usuário">Usuário:</label>
+            <input type="text" id="Nome" name="Nome"><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email"><br>
+            <label for="Senha">Senha:</label>
+            <input type="Senha" id="Senha" name="Senha"><br>
+            <input type="submit" value="Submit">
+        </form>
+    </section>
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="ProjetoAlfa.html">ProjetoAlfa</a></li>
+            <li><a href="NomeIdiomas.html">NomeIdiomas</a></li>
+            <li><a href="Curiosidades.html">Curiosidades</a></li>
+            <li><a href="Historico.html">Histórico</a></li>
         </ul>
     </nav>
     <h1 align="center">Meu site &#x1F604;</h1>
     <h2>Aqui irei postar tudo o que eu faço</h2>
     <h3>Futuramente irei colocar tudo em links</h3>
 
-    <h4>Histórico de Versões : &#x1F605;</h4> 
-    <strong><p>OBS : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong>
+    <h4>Histórico de Versões : &#x1F605;</h4>
+    <strong><p>OBS¹ : Login ainda não está funcionando, não cliquem</p></strong>
+    <strong><p>OBS² : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong>
+    <strong><p>OBS³ : Histórico completo basta clicar no Histórico acima</p></strong>
 
-    <strong>15/01</strong> 0.1 Criação do site &#x1F970; : Título e subtítulo <br>
-    <strong>16/01</strong>  0.2 Alfabeto e teste de alguns códigos &#x1F913; <br>
-    <strong>17/01</strong>  0.3 Meu nome em 59 idiomas &#x1F914; e adicionei a fonte como normal 20 Arial <br>
-    <strong>18/01</strong>  0.4 Símbolos Espciais de Planetas , Zodíaco e subtítulo.<br>Avisando que futuramente vai mudar, preciso ver como que da espaço, ta anotado em algum lugar kkkkk <br>
-    <strong>19/01</strong>  0.5 Coloquei pro título : família da fonte, tamanho, cor e sombreamento, pra página uma cor de fundo.<br>Alguns comandos não funcionam e o site ta mto lagado <br>
-    <strong>20/01</strong>  0.6 Adicionei cor para Parágrafos, Alinhamento para Parágros e Título, Identação e Pular linha <br>Eu não sei porque a 0.1 e 0.2 estão com um espaçamento enorme se ambas estão com h3 h4 e h5 &#x1F644; <br> Eu removi o excesso de linhas tb<br>
-    <strong>21/01</strong>  0.7 Adionei Emojis &#x1F603; junto com sua categoria, removi os h que estavam fazendo com que o texto tenha<br> um espaço enorme entre os parágrafos, agora o site abre em 150% pois antes estava muito pequeno e também<br> removi alguns p de parágrafo e adicionei mais br pra pular linha <br>
-    <strong>22/01</strong>  0.8 Adicionei comentários, basta apertar F12 e especificar todos clicando nas tags, <strong>adicionei</strong> também os dias<br> que postei as versões, lembrando que eu atualizo 1 dia antes !!! Adicionei a fonte aladdin.ttf, tive que declarar pro css<br> antes e por enquanto é isso <br>
-    <strong>23/01</strong> 0.9 A fonte que coloquei não estava funcionando, então quem quiser terá que baixar ela e por na pasta C>Windows>Fonts <li><a href="https://www.dafont.com/pt/aladdin.font" target="_blank">Fonte do Aladdin</a></li><li><a href="https://www.dafont.com/pt/aladdin.font" target="_blank">https://www.dafont.com/pt/aladdin.font</a><br>Coloquei os links na parte de cima do site, <strong>Removi</strong> a tabela lá de baixo e coloquei encima <br>
-    <strong>24/01</strong> 1.0 Coloquei emoji na aba, porém não está funcionando pra visitantes<br><strong>Adicionei</strong> listas pro caso de Alfabeto<br><strong>Transferi</strong> os estilos CSS pra pasta _css, antes ficava no html, agora a fonte parou de vez<br>
-    <strong>25/01</strong> 1.1 Essa versão saiu ontem ( 24/01 ), pois eu consegui resolver o problema da fonte e do favicon ( ícone na aba do navegador ),<br>mas mesmo assim irei resumir o que fiz :<br>
+    <strong>25/01</strong> 1.1<br>
+    Essa versão saiu ontem ( 24/01 ), pois eu consegui resolver o problema da fonte e do favicon ( ícone na aba do navegador ),<br>mas mesmo assim irei resumir o que fiz :<br>
     -Removi ( não removi de apagar, somente coloquei como comentário ) a fonte que estava dando problema, futuramente irei tentar<br>adicionar ela<br>
     -Entrei no discord da <a href="https://github.com/GabiiSantana" target="blank">GabiCode</a> e caçando sites de github achei <a href="https://thesun37.github.io/PrometeusProject/" target="blank">esse</a>, dando uma fuçada ( famoso F12 ) vi que o Github não trabalha<br>com pastas, somente com arquivos, ou seja, <br><strong>Não pode linkar pra outras pastas ou links pra carregar tal coisa</strong><br>-Eu tentei linkar a fonte pro meu Github mas não foi, então fica ai a dica<br>
     -O problema foi resolvido pra vocês visitantes, porém agora o favicon não aparece pra mim &#129313<br>
     Links citados :<br>
     <a href="https://github.com/GabiiSantana" target="blank">https://github.com/GabiiSantana</a><br>
-    <a href="https://thesun37.github.io/PrometeusProject/" target="blank">https://thesun37.github.io/PrometeusProject/</a>
+    <a href="https://thesun37.github.io/PrometeusProject/" target="blank">https://thesun37.github.io/PrometeusProject/</a><br><br>
 
-
-    <p>Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto Texto </p>
-    <br>
-    <strong>Emojis adicionados</strong> : <br>
-    -&#128531; Rosto Suando Frio = Coloquei mas tirei <br>
-    -&#129313; Cara de Palhaço <br>
-    -&#x1F603; Rosto sorridente com Olhos Grandes <br>
-    -&#x1F604; Rosto sorridente com Olhos Sorridentes <br>
-    -&#x1F605; Suor Feliz <br>
-    -&#x1F644; Rosto com Olhos Virados <br>
-    -&#x1F913; Rosto Nerd <br>
-    -&#x1F914; Rosto Pensante <br>
-    -&#x1F970; Rosto Apaixonado <br>
-    <br>
-
-<nav>  
-    <h1>Alfabetp</h1>
-        <ol>
-        <!--ol = Lista ordenada : 1,2,3,etc-->
-        <li>Aーあ</li>
-        <li>Bー</li>
-        <li>Cー</li>
-        <li>Dー</li>
-        <li>Eーえ</li>
-        <li>Fー</li>
-        <li></li>
-        <li>Gー</li>
-        <li>Hー</li>
-        <li>Ha</li>
-        <li>He</li>
-        <li>Hi</li>
-        <li>Ho</li>
-        <li>Hu</li>
-        <li>Iーい</li>
-        <li>Jー</li>
-        <li>Kー</li>
-        <li>Ka</li>
-        <li>Ke</li>
-        <li>Ki</li>
-        <li>Ko</li>
-        <li>Ku</li>
-        <li>Lー</li>
-        <li>Mー</li>
-        <li>Ma</li>
-        <li>Me</li>
-        <li>Mi</li>
-        <li>Mo</li>
-        <li>Mu</li>
-        <li>Nーん</li>
-        <li>Na</li>
-        <li>Ne</li>
-        <li>Ni</li>
-        <li>No</li>
-        <li>Nu</li>
-        <li>Oーお</li>
-        <li>Pー</li>
-        <li>Qー</li>
-        <li>Rー</li>
-        <li>Ra</li>
-        <li>Re</li>
-        <li>Ri</li>
-        <li>Ro</li>
-        <li>Ru</li>
-        <li>Sー</li>
-        <li>Sa</li>
-        <li>Se</li>
-        <li>Si</li>
-        <li>So</li>
-        <li>Su</li>
-        <li>Tー</li>
-        <li>Ta</li>
-        <li>Te</li>
-        <li>Ti</li>
-        <li>To</li>
-        <li>Tu</li>
-        <li>Uーう</li>
-        <li>Vー</li>
-        <li>Wー</li>
-        <li>Wa</li>
-        <li>We</li>
-        <li>Wi</li>
-        <li>Wo</li>
-        <li>Wu</li>
-        <li>Xー</li>
-        <li>Yー</li>
-        <li>Ya</li>
-        <li>Ye</li>
-        <li>Yi</li>
-        <li>Yo</li>
-        <li>Yu</li>
-        <li>Zー</li>
-        <li></li>
-    </ol>
-</nav>
-
-    <table>
-        <tr>
-            <th>Alfabeto</th>
-            <th>Planetas</th>
-            <th>Daniel Idiomas</th>
-        </tr>
-        <tr>
-            <td>A = </td>
-            <td>Sol &#9737</td>
-            <td>Row 1, Column 3</td>
-        </tr>
-        <tr>
-            <td>B = </td>
-            <td>Mercúrio &#9791</td>
-            <td>Row 2, Column 3</td>
-        </tr>
-        <tr>
-            <td>C = </td>
-            <td>Vênus &#9792</td>
-            <td>Row 2, Column 3</td>
-        </tr>
-        <tr>
-            <td>D = </td>
-            <td>Terra &#9793</td>
-            <td>Row 2, Column 3</td>
-        </tr>
-        <tr>
-            <td>E = </td>
-            <td>Terra &#9793</td>
-            <td>Row 2, Column 3</td>
-        </tr>
-        <tr>
-            <td>F = </td>
-            <td>Terra &#9793</td>
-            <td>Row 2, Column 3</td>
-        </tr>
-        <tr>
-            <td>G = </td>
-            <td>Terra &#9793</td>
-            <td>Row 2, Column 3</td>
-        </tr>
-        <tr>
-            <td>H = </td>
-            <td>Terra &#9793</td>
-            <td>Row 2, Column 3</td>
-        </tr>
-        <tr>
-            <td>I = </td>
-            <td>Terra &#9793</td>
-            <td>Row 2, Column 3</td>
-        </tr>
-    </table>
-    <br>
-    <h11>Símbolos Especiais </h11>
-    <p>
-    Planetas : </p>
-	Marte	&#9794</p>
-	Júpiter	&#9795</p>
-	Saturno	&#9796</p>
-	Urano	&#9797</p>
-    Netuno	&#9798</p>
-    Plutão	&#9799</p>
-
-    <p>Zodíaco: </p>
-    <p>Áries	&#9800</p>
-    <p>Touro	&#9801</p>
-    <p>Gêmeos	&#9802</p>
-	<p>Câncer	&#9803</p>
-	<p>Leão	&#9804</p>
-	<p>Virgem	&#9805</p>
-	<p>Libra	&#9806</p>
-	<p>Escorpião	&#9807</p>
-	<p>Sagitário	&#9808</p>
-	<p>Capricórnio	&#9809</p>
-    <p>Aquário	&#9811</p>
-	<p>Peixes	&#9810</p>
-    <h1 align="center"><strong>Meu nome em vários idiomas</strong></h1>
-
-    <p>1-Américo : ዳንኤል dani’ēli</p>
-    <p>-Árabe : دانيالdanial</p>
-    <p>-Armênio : Դանիել Daniyel</p>
-    <p>-Bengali : ড্যানিয়েল Ḍyāniẏēla</p>
-    <p>5-Bielorusso : Данііл Daniil</p>
-    <p>-Birmanês : ဒံယေလ danyayl</p>
-    <p>-Búlgaro : Даниел</p>
-    <p>-Canarim : ಡೇನಿಯಲ್ Ḍēniyal
-    <nïél>-Cazaque : Даниэль Danïél
-    <p>10-Chinês ( Simples ) : 丹尼尔 Dānní'ěr
-    <p>11-Chinês ( tradicional ) : 丹尼爾 Dānní'ěr
-    <p>-Cingalês : ඩැනියෙල් ḍæniyel</p>
-    <p>-Coreano : 다니엘</p>
-    <p>-Croata : Daniele</p>
-    <p>15-Georgiano : დანიელი Danieli
-    <p>-Grego : Ντάνιελ Ntániel
--   <p>-Guzerate : ડેનિયલ Ḍēniyala
-    <p>-Haitiano : Danyèl</p>
-    <p>-Hauçá : Daniyel</p>
-    <p>20-Havaiano : ʻO Daniel
-    <p>21-Hebraico : דניאל</p>
-    <p>-Híndi : डैनियल dainiyal</p>
-    <p>-Lídiche : דניאל dnyal</p>
-    <p>-Iorubá : Dáníẹ́lì</p>
-    <p>25-Japonês : ダニエル Danieru
-    <p>-Khmer : ដានីយ៉ែល da ni ye l
-    <p>-Laosiano : ດານຽນ da nian
-    <p>-Letão : Daniels</p>
-    <p>-Lituano : Danielius</p>
-    <p>30-Macedônio : Даниел</p>
-    <p>31-Malaiala : ഡാനിയേൽ ḍāniyēl <br>
-    <p>-Malgaxe : Daniela<br>
-    <p>-Maori : Raniera<br>
-    <p>57-Xona-Marati : डॅनियल Ḍĕniyala</p>
-    <p>35-Mongol : Даниел Daniyel<br>
-    <p>-Nepalês : डानियल Ḍāniyala<br>
-    <p>-Oriá = ଦାନିୟେଲ |<br>
-    <p>-Panjabi = ਡੈਨੀਅਲ Ḍainī'ala<br>
-    <p>-Pashto = دانیل<br>
-    <p>40-Persa = دانیل<br>
-    <p>41-Quirguiz = Даниел<br>
-    <p>-Russo = Даниэль<br>
-    <p>-Samoano = Tanielu<br>
-    <p>-Sérvio = Даниел<br>
-    <p>45-Sindi = ڊينئل<br>
-    <p>-Somali = Daanyeel<br>
-    <p>-Tadijique = Дониёл Donijol</p>
-    <p>-Tailandês = แดเนียล Dæ neīy</p>
-    <p>-Tâmil = டேனியல் Ṭēṉiyal</p>
-    <p>50-Tártaro = Данил</p>
-    <p>-Techo = Danieli</p>
-    <p>-Télugo = డేనియల్ Ḍēniyal</p>
-    <p>-Ucraniano : Даніель</p>
-    <p>-Uigur : دانىيال</p>
-    <p>-Urdu : ڈینیل</p>
-    <p>55-Uzbeque : Doniyor</p>
-    <p>56-Xhosa : UDaniel</p>
-    57-Xona : Dhanieri</p>
-    58-Zulu : UDaniel</p>
-    59 idiomas Pq eu estava traduzindo do Português<br>
-
-    <br>
-    <table>
-            <tr>
-                <th>Alfabeto</th>
-                <th>Header 2</th>
-                <th>Header 3</th>
-            </tr>
-            <tr>
-                <td>A, Column 1</td>
-                <td>Row 1, Column 2</td>
-                <td>Row 1, Column 3</td>
-            </tr>
-            <tr>
-                <td>B, Column 1</td>
-                <td>Row 2, Column 2</td>
-                <td>Row 2, Column 3</td>
-            </tr>
-    </table>
-    <h1 align="center"><strong>Alfabeto</strong></h1>
-    <p>01 -A - あ (01)</p>
-    <p>"02 -B - "</p>
-    <p>03 -C -</p>
-    <p>04-Chi -　ち (17)
-    <p>05 -D -</p>
-    <p>06 -E - え (04)
-    <p>07 -F -</p>
-    <p>08-Fu -　ふ</p>
-    <p>09 -G -</p>
-    <p>10 -H -</p>
-    <p>11-Ha - は</p>
-    <p>12-Hi - ひ</p>
-    <p>13-He - へ</p>
-    <p>14-Ho - ほ</p>
-    <p>15-09 -I - い (02)
-    <p>16-10 -J -</p>
-    <p></p>17-11 -K -</p>
-    <p></p>18-Ka -　か (06)
-    <p></p>19-Ki - き (07)
-    <p></p>20-Ku - く (08)
-    <p></p>21-Ke - け (09)
-    <p></p>22-KO - こ (10)
-    <p></p>23--12 -L -</p>
-    <p>24--13 -M -</p>
-    <p>25-Ma -　ま</p>
-    <p>26-Mi - み</p>
-    <p>27-Mu - む</p>
-    <p>28-Me - め</p>
-    <p>29-Mo - も</p>
-    <p>30-N -</p>
-    <p>31-Na - な</p>
-    <p>32-Ni - に</p>
-    <p>33-Nu - ぬ</p>
-    <p>34-Ne - ね</p>
-    <p>35-No - の</p>
-    <p>36-15 -O - お (05)
-    <p>37-16 -P -</p>
-    <p>38-17 -Q -</p>
-    <p>39-18 -R -</p>
-    <p></p>40-Ra - ら</p>
-    <p></p>41-Ri - り</p>
-    <p></p>42-Ru - る</p>
-    <p></p>43-Re - れ</p>
-    <p></p>44-Ro -　ろ</p>
-    <p></p>45-19 -S -</p>
-    <p></p>46-Sa - さ (11)
-    <p></p>47-Shi - し (12)
-    48-Su - す (13)</p>
-    49-Se - せ (14)</p>
-    <p></p>50-So -　そ (15)
-    51-20 -T -</p>
-    52-Ta - た (16)
-    53-Tsu - つ (18)
-    54-Te - て (19)
-    55-To -　と (20)
-    56-21 -U - う (03)
-    57-22 -V -</p>
-    58-23 -W -</p>
-    59-Wa - わ</p>
-    60-Wo -　を</p>
-    61-24 -X -</p>
-    62-25 -Y -</p>
-    <p></p> 63-Ya - や
-    64-Yu - ゆ</p>
-    65-Yo -　よ</p>
-    66-26 -Z -</p>
-    <p>Linha 1</p>
-    <p>Linha 2</p>
-    <p>Linha 3</p>
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-    
-    <section>
-        <img src="image.jpg" alt="image description">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, velit vel pretium bibendum, libero nibh
-            dictum elit, at porta velit risus vel turpis.</p>
-        <form action="submit-form.php" method="post">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name"><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email"><br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password"><br>
-            <input type="submit" value="Submit">
-        </form>
-    </section>
-    
-
-    <p>Linha 101.258</p>
-    <div id="options">
-        <a href="#option1">Opção 1</a>
-        <br>
-        <a href="#option2">Opção 2</a>
-        <br>
-        <a href="#option3">Opção 3</a>
-        <br>
-        <a href="#option4">Opção 4</a>
-        <br>
-        <a href="#option5">Opção 5</a>
-    </div>
-    <footer>
+    <strong>26/01</strong> 1.2<br>
+    Corrigi o problema do favicon que não aparecia, era pra apertar F5, isso apaga os dados salvos do site<br>
+    Editei os menus acima pra diminuir<br> o tanto de coisas na tela<br>
+    Agora temos :<br> 
+    ProjetoAlfa ( quero basicamente escrever todas letras em todos idiomas ),<br> 
+    NomeIdiomas = meu nome em vários idiomas <br>
+    Curiosidades = Irei por o Projeto ProjetoAlfa + NomeIdiomas<br>
+    Histórico = Irei por o histórico de versões do site, na página principal terá só os 2 últimos<br><br>
+   <footer>
         <p>Copyright ©2022</p>
     </footer>
 </body>
