--- a/Historico.html
+++ b/Historico.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Histórico</title>
+    <link rel="stylesheet" href="estilo.css">
+    <!--Aqui eu estou dizendo pro Navegador usar o estilo do arquivo estilo.css-->
 </head>
+
 <body>
     <h4>Histórico de Versões : &#x1F605;</h4> 
     <strong><p>OBS : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong>
 
+    <div class="container container-1">
     <strong>15/01</strong> 0.1<br>
     Criação do site &#x1F970; : Título e subtítulo <br><br>
 
@@ -33,6 +37,10 @@
 
     <strong>22/01</strong> 0.8<br> 
     Adicionei comentários, basta apertar F12 e especificar todos clicando nas tags, <strong>adicionei</strong> também os dias<br> que postei as versões, lembrando que eu atualizo 1 dia antes !!! Adicionei a fonte aladdin.ttf, tive que declarar pro css<br> antes e por enquanto é isso <br><br>
+    
+    </div>
+
+    <div class="container container-2">
 
     <strong>23/01</strong> 0.9<br>
     A fonte que coloquei não estava funcionando, então quem quiser terá que baixar ela e por na pasta C>Windows>Fonts <li><a href="https://www.dafont.com/pt/aladdin.font" target="_blank">Fonte do Aladdin</a></li><li><a href="https://www.dafont.com/pt/aladdin.font" target="_blank">https://www.dafont.com/pt/aladdin.font</a><br>Coloquei os links na parte de cima do site, <strong>Removi</strong> a tabela lá de baixo e coloquei encima <br><br>
@@ -57,6 +65,8 @@
     NomeIdiomas = meu nome em vários idiomas <br>
     Curiosidades = Irei por o Projeto ProjetoAlfa + NomeIdiomas<br>
     Histórico = Irei por o histórico de versões do site, na página principal terá só os 3 últimos<br><br>
+
+    </div>
     
     <strong>Emojis adicionados</strong> : <br>
     -&#128531; Rosto Suando Frio = Coloquei mas tirei <br>
