--- a/index.html
+++ b/index.html
@@ -1,31 +1,18 @@
-<!-- A maioria das tags tem < abertura e fechamento /> -->
 <!DOCTYPE html>
-    <!--Diz pro navegador que o Documento está no formato HMTL-->
 <html lang="pt-br">
-     <!-- pt-br ta dizendo pro navegador que é português do Brasil -->
-
 <head>
-    <!--E o cabeçalho do documento, é o visual do site-->
     <meta charset="UTF-8">
-    <!--Diz pro Site que ele permite o Conjunto de Caracteres UTF-8 ( Acentuação e Cecidilha ç )-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--Indica ao Navegador IE que deve usar a versão mais recente-->
     <meta name="viewport" content="width=device-width, initial-scale=0.5">
-    <!--Vai ocupar 150% ( 0.5) da Tela do PC-->
-    <!--Se fosse 1.0 seria 100% -->
-    <!--Se fosse 1.5 seria 50%-->
     <link rel="shortcut icon" href="favicon.ico">
-    <!--digitar link e depois escolher opção favicon.ico, colocar o local do ícones em href . Atalho CTRL Espaço -->
     <title>Meu site</title>
-    <!--O que irá aparecer na Aba do Navegador-->
     <link rel="stylesheet" href="estilo.css">
 
 </head>
 
 <body>
     <section>
-        <img src=" " alt="image description">
-        <p>Texto</p>
+        <p>Login</p>
         <form action="submit-form.php" method="post">
             <label for="Usuário">Usuário:</label>
             <input type="text" id="Nome" name="Nome"><br>
@@ -36,14 +23,17 @@
             <input type="submit" value="Submit">
         </form>
     </section>
-    <nav>
-        <ul>
-            <li><a href="ProjetoAlfa.html">ProjetoAlfa</a></li>
-            <li><a href="NomeIdiomas.html">NomeIdiomas</a></li>
-            <li><a href="Curiosidades.html">Curiosidades</a></li>
-            <li><a href="Historico.html">Histórico</a></li>
-        </ul>
-    </nav>
+
+    <ul>
+        <li><a href="ProjetoAlfa.html">ProjetoAlfa</a></li>
+        <li><a href="NomeIdiomas.html">NomeIdiomas</a></li>
+        <li><a href="Curiosidades.html">Curiosidades</a></li>
+        <li><a href="Historico.html">Histórico</a></li>
+        <li><a href="Pagina.html">Página</a></li>
+        <li><a href="Atalhos.html">Atalhos</a></li>
+        <li><a href="Tags.html">Tags</a></li>
+    </ul>
+
     <h1 align="center">Meu site &#x1F604;</h1>
     <h2>Aqui irei postar tudo o que eu faço</h2>
     <h3>Futuramente irei colocar tudo em links</h3>
@@ -66,10 +56,18 @@
     Corrigi o problema do favicon que não aparecia, era pra apertar F5, isso apaga os dados salvos do site<br>
     Editei os menus acima pra diminuir<br> o tanto de coisas na tela<br>
     Agora temos :<br> 
-    ProjetoAlfa ( quero basicamente escrever todas letras em todos idiomas ),<br> 
+    ProjetoAlfa = quero basicamente escrever todas letras em todos idiomas ,<br> 
     NomeIdiomas = meu nome em vários idiomas <br>
     Curiosidades = Irei por o Projeto ProjetoAlfa + NomeIdiomas<br>
     Histórico = Irei por o histórico de versões do site, na página principal terá só os 2 últimos<br><br>
+
+    <strong>27/01</strong> 1.3<br>
+    -Mais comentários nos códigos<br>
+    -Antes as páginas não tinham estilo, isso aconteceu porque eu não disse onde estava o estilo no html <br>
+    -Eu percebi que no meu celular não consigo acessar por dentro do site, então por isso criei um menu de dicas, lá irei por tudo, sem contar<br> que irá me ajudar, pois muitos comentários atrapalha<br>
+    -A princípio só tem Dicas, futuramente irei colocar Atalhos e Tags pra ficar mais organizado<br>
+    -Removi todos comentários da página principal
+
    <footer>
         <p>Copyright ©2022</p>
     </footer>
