--- a/NomeIdiomas.html
+++ b/NomeIdiomas.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilo.css">
+    <!--Aqui eu estou dizendo pro Navegador usar o estilo do arquivo estilo.css-->
 </head>
+
 <body>
     <h1 align="center"><strong>Meu nome em vários idiomas</strong></h1>
 
