--- a/index.html
+++ b/index.html
@@ -11,27 +11,15 @@
 </head>
 
 <body>
-    <section>
-        <p>Login</p>
-        <form action="submit-form.php" method="post">
-            <label for="Usuário">Usuário:</label>
-            <input type="text" id="Nome" name="Nome"><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email"><br>
-            <label for="Senha">Senha:</label>
-            <input type="Senha" id="Senha" name="Senha"><br>
-            <input type="submit" value="Submit">
-        </form>
-    </section>
-
     <ul>
-        <li><a href="ProjetoAlfa.html">ProjetoAlfa</a></li>
-        <li><a href="NomeIdiomas.html">NomeIdiomas</a></li>
+        <li><a href="Algoritmo.html">Algoritmo</a></li>
+        <li><a href="Atalhos.html">Atalhos</a></li>
         <li><a href="Curiosidades.html">Curiosidades</a></li>
         <li><a href="Historico.html">Histórico</a></li>
+        <li><a href="NomeIdiomas.html">NomeIdiomas</a></li>
         <li><a href="Pagina.html">Página</a></li>
-        <li><a href="Atalhos.html">Atalhos</a></li>
-        <li><a href="Tags.html">Tags</a></li>
+        <li><a href="ProjetoAlfa.html">ProjetoAlfa</a></li>
+        <li><a href="TagsHTML.html">TagsHTML</a></li>
     </ul>
 
     <h1 align="center">Meu site &#x1F604;</h1>
@@ -39,34 +27,16 @@
     <h3>Futuramente irei colocar tudo em links</h3>
 
     <h4>Histórico de Versões : &#x1F605;</h4>
-    <strong><p>OBS¹ : Login ainda não está funcionando, não cliquem</p></strong>
-    <strong><p>OBS² : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong>
-    <strong><p>OBS³ : Histórico completo basta clicar no Histórico acima</p></strong>
+    <strong><p>OBS¹ : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong>
+    <strong><p>OBS² : Histórico completo basta clicar no Histórico acima</p></strong>
 
-    <strong>25/01</strong> 1.1<br>
-    Essa versão saiu ontem ( 24/01 ), pois eu consegui resolver o problema da fonte e do favicon ( ícone na aba do navegador ),<br>mas mesmo assim irei resumir o que fiz :<br>
-    -Removi ( não removi de apagar, somente coloquei como comentário ) a fonte que estava dando problema, futuramente irei tentar<br>adicionar ela<br>
-    -Entrei no discord da <a href="https://github.com/GabiiSantana" target="blank">GabiCode</a> e caçando sites de github achei <a href="https://thesun37.github.io/PrometeusProject/" target="blank">esse</a>, dando uma fuçada ( famoso F12 ) vi que o Github não trabalha<br>com pastas, somente com arquivos, ou seja, <br><strong>Não pode linkar pra outras pastas ou links pra carregar tal coisa</strong><br>-Eu tentei linkar a fonte pro meu Github mas não foi, então fica ai a dica<br>
-    -O problema foi resolvido pra vocês visitantes, porém agora o favicon não aparece pra mim &#129313<br>
-    Links citados :<br>
-    <a href="https://github.com/GabiiSantana" target="blank">https://github.com/GabiiSantana</a><br>
-    <a href="https://thesun37.github.io/PrometeusProject/" target="blank">https://thesun37.github.io/PrometeusProject/</a><br><br>
-
-    <strong>26/01</strong> 1.2<br>
-    Corrigi o problema do favicon que não aparecia, era pra apertar F5, isso apaga os dados salvos do site<br>
-    Editei os menus acima pra diminuir<br> o tanto de coisas na tela<br>
-    Agora temos :<br> 
-    ProjetoAlfa = quero basicamente escrever todas letras em todos idiomas ,<br> 
-    NomeIdiomas = meu nome em vários idiomas <br>
-    Curiosidades = Irei por o Projeto ProjetoAlfa + NomeIdiomas<br>
-    Histórico = Irei por o histórico de versões do site, na página principal terá só os 2 últimos<br><br>
-
-    <strong>27/01</strong> 1.3<br>
-    -Mais comentários nos códigos<br>
-    -Antes as páginas não tinham estilo, isso aconteceu porque eu não disse onde estava o estilo no html <br>
-    -Eu percebi que no meu celular não consigo acessar por dentro do site, então por isso criei um menu de dicas, lá irei por tudo, sem contar<br> que irá me ajudar, pois muitos comentários atrapalha<br>
-    -A princípio só tem Dicas, futuramente irei colocar Atalhos e Tags pra ficar mais organizado<br>
-    -Removi todos comentários da página principal
+    <strong>28/01</strong> 1.4<br>
+    Bom galera eu tentei reverter o histório, ao invés de ser de cima pra baixo, ser de baixo pra cima, usando comando, mas bugou<br> completamente,<br>
+    Antes eu testei e deu certo, porém no meu site aconteceu isso, então fiz na mão<br>
+    <strong>Ontem</strong> eu falei que as dicas estavam no menu Dicas, porém só hoje eu percebi que tinha mudado o nome pra Página kkkkkkkk<br>
+    Agora o menu está mais limpo, pois resolvi mudar, agora irei postar somente a do dia aqui<br>
+    Removi o Login temporariamente, pois não vou mexer tão cedo<br>
+    Criei a página Algoritmo, nela irei por dicas de Algoritmo é claro, linguagem Portugol
 
    <footer>
         <p>Copyright ©2022</p>
