--- a/Algoritmo.html
+++ b/Algoritmo.html
@@ -8,291 +8,297 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <pre>
-    Revisão Lógica de Programação Algoritmo
-    !!! Usando Visualg  !!!
+	<ul>
+        <li><a href="index.html" rel="prev">Voltar</a></li>
+    </ul>
+	<div id="interface">
+	<h1>Algoritmo</h1>
+	<h2>Revisão Lógica de Programação Algoritmo</h2>
+    <h3>!!! Usando Visualg  !!!</h3>
 
-algoritmo "Nome do Algoritmo"
-var
-	indentificador : tipo
-inicio
-	Comandos de Saída
-fimalgoritmo
+	<p><br>
+	algoritmo "Nome do Algoritmo"<br>
+	var<br>
+	indentificador : tipo<br>
+	inicio<br>
+	Comandos de Saída<br>
+	fimalgoritmo
+	</p>
 
 ---------------------------------
-0-Comandos :
+<p>0-Comandos :</p>
 
 ! dps CTRL+Espaço = Cria um modelo de pseudocódigo 
-algoritmo "semnome"
+algoritmo "semnome"</p>
 *
-inicio
-fimalgoritmo
+<p>inicio</p>
+</p>fimalgoritmo</p>
 
-# dps CTRL+Espaço = Cria um cabeçalho de programa
-// Algoritmo : *
-// Função :
-// Autor :
-// Data 
+</p># dps CTRL+Espaço = Cria um cabeçalho de programa</p>
+</p>// Algoritmo : *</p>
+</p>// Função :</p>
+</p>// Autor :</p>
+</p>// Data </p>
 
-CTRL +
+</p>CTRL +</p>
 
-F2 = Termina imediatamente a execução do pseudocódigo. Evidentemente, este botão fica desabilitado quando o pseudocódigo não está sendo executado.
+</p>F2 = Termina imediatamente a execução do pseudocódigo. Evidentemente, este botão fica desabilitado quando o pseudocódigo não está sendo executado.</p>
 
-F3 = Exibe a pilha de subprogramas ativados num dado momento. Convém utilizar este comando em conjunto com breakpoints ou com a execução passo a passo.
+</p>F3 = Exibe a pilha de subprogramas ativados num dado momento. Convém utilizar este comando em conjunto com breakpoints ou com a execução passo a passo.</p>
 
-F5 = Desativa todos os breakpoints que estejam ativados naquele momento. 
+F5 = Desativa todos os breakpoints que estejam ativados naquele momento. </p>
 
-A = Abre um arquivo anteriormente gravado, substituindo o texto presente no editor. Se este tiver sido modificado, o VisuAlg pedirá sua confirmação para salvá-lo antes que seja sobreposto.
+A = Abre um arquivo anteriormente gravado, substituindo o texto presente no editor. Se este tiver sido modificado, o VisuAlg pedirá sua confirmação para salvá-lo antes que seja sobreposto.</p>
 
-C = Copia o texto selecionado para a área de transferência.
+C = Copia o texto selecionado para a área de transferência.</p>
 
-G = Corrige automaticamente a indentação (ou tabulação) do pseudocódigo, tabulando cada comando interno com espaços à esquerda.
+G = Corrige automaticamente a indentação (ou tabulação) do pseudocódigo, tabulando cada comando interno com espaços à esquerda.</p>
 
-L = Localiza no texto presente no editor determinada palavra especificada.
+L = Localiza no texto presente no editor determinada palavra especificada.</p>
 
-N = Cria um novo "esqueleto" de pseudocódigo, substituindo o texto presente no editor. Se este tiver sido modificado, o VisuAlg pedirá sua confirmação para salvá-lo antes que seja sobreposto.
+N = Cria um novo "esqueleto" de pseudocódigo, substituindo o texto presente no editor. Se este tiver sido modificado, o VisuAlg pedirá sua confirmação para salvá-lo antes que seja sobreposto.</p>
 
-P = Impressão
+P = Impressão</p>
 
 S = Grava imediatamente o texto presente no editor. Na primeira vez que um novo texto é gravado, o VisuAlg pede seu nome e localização.
-Imprimir: Imprime imediatamente na impressora padrão o texto presente no editor. Para configurar a impressão, use o comando Imprimir do menu Arquivo (acessível também pelo atalho Ctrl-P)
+Imprimir: Imprime imediatamente na impressora padrão o texto presente no editor. Para configurar a impressão, use o comando Imprimir do menu Arquivo (acessível também pelo atalho Ctrl-P)</p>
 
-U = Localiza no texto presente no editor determinada palavra especificada, substituindo-a por outra.
+U = Localiza no texto presente no editor determinada palavra especificada, substituindo-a por outra.</p>
 
-V = Copia texto da área de transferência para o local em que está o cursor.
+V = Copia texto da área de transferência para o local em que está o cursor.</p>
 
-X = Apaga texto selecionado, armazenando-o em uma área de transferência.
+X = Apaga texto selecionado, armazenando-o em uma área de transferência.</p>
 
-Z = Desfaz último comando efetuado.
+Z = Desfaz último comando efetuado.</p>
 
-Abrir (Ctrl-A): 
-Novo (Ctrl-N): 
-Salvar (Ctrl-S): .
-Cortar (Ctrl-X):
-Copiar (Ctrl-C): 
-Colar (Ctrl-V): 
-Desfazer (Ctrl-Z): 
-Localizar (Ctrl-L): 
-Substituir (Ctrl-U): 
-Refazer (Shift-Ctrl-Z): Refaz último comando desfeito.
+Abrir (Ctrl-A): </p>
+Novo (Ctrl-N): </p>
+Salvar (Ctrl-S): .</p>
+Cortar (Ctrl-X):</p>
+Copiar (Ctrl-C): </p>
+Colar (Ctrl-V): </p>
+Desfazer (Ctrl-Z): </p>
+Localizar (Ctrl-L): </p>
+Substituir (Ctrl-U): </p>
+Refazer (Shift-Ctrl-Z): Refaz último comando desfeito.</p>
 
-1-Dicas :
+1-Dicas :</p>
 
-Caso esteja em branco : ! + CNTRL Espaço
-Isso faz com que seja preenchido o Visualg
+Caso esteja em branco : ! + CNTRL Espaço</p>
+Isso faz com que seja preenchido o Visualg</p>
 
-2-Comentários :
-// Isso é um comentário 
+2-Comentários :</p>
+// Isso é um comentário </p>
 
-3-Variáveis :
+3-Variáveis :</p>
 
-var 
-	indentificador : tipo
-Ex: 	N1, N2, N3: Inteiro
+var </p>
+	indentificador : tipo</p>
+Ex: 	N1, N2, N3: Inteiro</p>
 
 Variáveis são espaços na memória que vão guardar valores
-Exemplo : msg: Caractere
-Se eu der o comando 
-	Escreval(msg)
-Vai escrever o conteúdo da variável msg que é msg
+Exemplo : msg: Caractere</p>
+Se eu der o comando </p>
+	Escreval(msg)</p>
+Vai escrever o conteúdo da variável msg que é msg</p>
 
-4-Identificadores :
+4-Identificadores :</p>
 
-1-Deve começar com uma letra
-2-Os próximos caracteres podem ser letras ou números
-3-Não se pode utilizar nenhum símbolo, excete _ ( underline )
-4-Não pode conter espaços em branco
-5-Não pode conter letras com acentos
-6-Não pode ser uma palavra reservada
+1-Deve começar com uma letra</p>
+2-Os próximos caracteres podem ser letras ou números</p>
+3-Não se pode utilizar nenhum símbolo, excete _ ( underline )</p>
+4-Não pode conter espaços em branco</p>
+5-Não pode conter letras com acentos</p>
+6-Não pode ser uma palavra reservada</p>
 
-5-Tipos > Primitivos:
+5-Tipos > Primitivos:</p>
 
-OBS 1 : No portugal não se usa , ( vírgula ) e sim . ( ponto )
-OBS 2 : Dentro de "aspas" pode utilizar tudo
+OBS 1 : No portugal não se usa , ( vírgula ) e sim . ( ponto )</p>
+OBS 2 : Dentro de "aspas" pode utilizar tudo</p>
 
--Inteiro : Ex -3,1,0,
--Real 	: Ex 0.5, 5.0, -77.4, 3.1415
--Caractere : Ex "Gustavo" "Algoritmo" "123"
--Logico : Ex verdadeiro e falso
--Palavra reservada : sublinhada com tom de azul .Exemplos : algoritmo, inicio, var
+-Inteiro : Ex -3,1,0,</p>
+-Real 	: Ex 0.5, 5.0, -77.4, 3.1415</p>
+-Caractere : Ex "Gustavo" "Algoritmo" "123"</p>
+-Logico : Ex verdadeiro e falso</p>
+-Palavra reservada : sublinhada com tom de azul .Exemplos : algoritmo, inicio, var</p>
 
-6-Comandos de Saída : Ficam na área inicio
+6-Comandos de Saída : Ficam na área inicio</p>
 
-1-Escreva ("Mensagem qualquer")
-Vai escrever Mensagem qualquer
-2-Escreval ("Mensagem qualquer")
+1-Escreva ("Mensagem qualquer")</p>
+Vai escrever Mensagem qualquer</p>
+2-Escreval ("Mensagem qualquer")</p>
 Vai escrever Mensagem qualquer e saltar pra linha de baixo
-3-Leia(variável)
-Vai guardar na memória a variável
-4-Variável <- Operação
-Ex: S <- n1 + n2
+3-Leia(variável)</p>
+Vai guardar na memória a variável</p>
+4-Variável <- Operação</p>
+Ex: S <- n1 + n2</p>
 
-7-Operadores Aritméticos : 7
-Sendo Ex A = 5 e B = 2
-5 | 2
-1   2
-Dividendo 5
-Divisor 2
-Quociente 2
-Resto 1
+7-Operadores Aritméticos : 7</p>
+Sendo Ex A = 5 e B = 2</p>
+5 | 2</p>
+1   2</p>
+Dividendo 5</p>
+Divisor 2</p>
+Quociente 2</p>
+Resto 1</p>
 
-1-Adição + = A + B > 7
-2-Subtração - = A - B : 3
-3-Multiplicação * = A * B > 10
-4-Divisão / = A / B > 2.5
-5-Divisão Inteira \ = A \ B > 2
-Quociente da Divisão 5 / 2
-6-Exponenciação ^ = A ^ B > 25
-7-Módulo % = A % B > 1
-Resto da Divisão 5 / 2
+1-Adição + = A + B > 7</p>
+2-Subtração - = A - B : 3</p>
+3-Multiplicação * = A * B > 10</p>
+4-Divisão / = A / B > 2.5</p>
+5-Divisão Inteira \ = A \ B > 2</p>
+Quociente da Divisão 5 / 2</p>
+6-Exponenciação ^ = A ^ B > 25</p>
+7-Módulo % = A % B > 1</p>
+Resto da Divisão 5 / 2</p>
 
-8-Ordem de Precedência :
-1-Parênteses ( )
-2-Exponenciação ^
-3-Multiplicação / Divisão * /
-4-Adição / Subtração + - 
-Ex :	3 + 2 / 2 
-	3 + 1 
-	4
-Ex : 	(3 + 2) / 2 
-	5 / 2
-	2.5
+8-Ordem de Precedência :</p>
+1-Parênteses ( )</p>
+2-Exponenciação ^</p>
+3-Multiplicação / Divisão * /</p>
+4-Adição / Subtração + - </p>
+Ex :	3 + 2 / 2 </p>
+	3 + 1 </p>
+	4</p>
+Ex : 	(3 + 2) / 2 </p>
+	5 / 2</p>
+	2.5</p>
 
-9-Funções Aritméticas :
+9-Funções Aritméticas :</p>
 
-1-Valor Absoluto = Abs(-10) = 10
-Valor positivo
-2-Exponenciação = Exp(3,2) = 9
-3² = 9
-3-Valor Inteiro = Int(3.9) = 3
-Somente a parte inteira
-4-Raiz Quadrada = RaizQ(25) > 5
-5-Retorna Pi = Pi > 3.1415
-6-Seno (rad) = Sen(0.523) > 0.5
-7-Cosseno (rad) = Cos(0.523) > 0.86
-8-Tangente (rad) = Tag(0.523) > 0.57
-9-Graus para Rad = GraupRad(30) > 0.523
+1-Valor Absoluto = Abs(-10) = 10</p>
+Valor positivo</p>
+2-Exponenciação = Exp(3,2) = 9</p>
+3² = 9</p>
+3-Valor Inteiro = Int(3.9) = 3</p>
+Somente a parte inteira</p>
+4-Raiz Quadrada = RaizQ(25) > 5</p>
+5-Retorna Pi = Pi > 3.1415</p>
+6-Seno (rad) = Sen(0.523) > 0.5</p>
+7-Cosseno (rad) = Cos(0.523) > 0.86</p>
+8-Tangente (rad) = Tag(0.523) > 0.57</p>
+9-Graus para Rad = GraupRad(30) > 0.523</p>
 
-10-Operadores Relacionais : 
+10-Operadores Relacionais : </p>
 
-1-Maior que >
-2-Menor que <
-3-Maior ou igual a >=
-4-Menor ou igual a <=
-5-Igual a =
-6-Diferente de <>
+1-Maior que ></p>
+2-Menor que <</p>
+3-Maior ou igual a >=</p>
+4-Menor ou igual a <=</p>
+5-Igual a =</p>
+6-Diferente de <></p>
 
-11-Operadores Lógicos :
+11-Operadores Lógicos :</p>
 
--Operador E = Eu quero que as 2 sejam V
--Se p e q são V, logo p e q é Verdadeiro
--Se p for V e q for F, logo p e q é Falso
--Se p for F e q for V, logo p e q é F
--Se p for F e q for F, logo p e q é F
+-Operador E = Eu quero que as 2 sejam V</p>
+-Se p e q são V, logo p e q é Verdadeiro</p>
+-Se p for V e q for F, logo p e q é Falso</p>
+-Se p for F e q for V, logo p e q é F</p>
+-Se p for F e q for F, logo p e q é F</p>
 
--Operador OU = Eu quero que p /q seja V
--Se p e q são V, logo p ou q é Verdadeiro
--Se p for V e q for F, logo p ou q é V
--Se p for F e q for F, logo p ou q é V
--Se p for F e q for F, logo p ou q é F
+-Operador OU = Eu quero que p /q seja V</p>
+-Se p e q são V, logo p ou q é Verdadeiro</p>
+-Se p for V e q for F, logo p ou q é V</p>
+-Se p for F e q for F, logo p ou q é V</p>
+-Se p for F e q for F, logo p ou q é F</p>
 
--Operador Não = É o contrário
--Se p for V, logo Não p é F
--Se q for F, logo Não q é V
+-Operador Não = É o contrário</p>
+-Se p for V, logo Não p é F</p>
+-Se q for F, logo Não q é V</p>
 
-12-Ordem de Precedência :
+12-Ordem de Precedência :</p>
 
-1° Aritméticos : (), ^,*/, e +-
-2° Relacionais : Todos
-3° Lógicos : E, OU e Não
+1° Aritméticos : (), ^,*/, e +-</p>
+2° Relacionais : Todos</p>
+3° Lógicos : E, OU e Não</p>
 
-13-Estruturas Condicionais : 
+<strong>13-Estruturas Condicionais : </strong></p>
 
-Se ( expressão ) entao
-	Bloco A
-FimSe
-Se algo acontecer, então vai acontecer o Bloco A
+Se ( expressão ) entao</p>
+----Bloco A</p>
+FimSe</p>
+Se algo acontecer, então vai acontecer o Bloco A</p>
 
-Se ( expressão ) entao
-	Bloco A
+Se ( expressão ) entao</p>
+----Bloco A</p>
+senao</p>
+----Bloco B</p>
+FimSe</p>
+Se algo acontecer, então vai acontecer o Bloco A, senão vai acontecer o Bloco B</p>
+
+Condicional Simples : Se ... entao</p>
+... Composta : Se ... entao ... senao</p>
+
+Se (situação 1) então</p>
+----Bloco A</p>
 senao
-	Bloco B
-FimSe
-Se algo acontecer, então vai acontecer o Bloco A, senão vai acontecer o Bloco B
+	Se (situação 2) entao</p>
+--------Bloco B</p>
+	senao</p>
+--------Bloco C</p>
+	FimSe</p>
+FimSe</p>
 
-Condicional Simples : Se ... entao
-... Composta : Se ... entao ... senao
+Temos 2 condições( se ... então...senão e Se ... então ), então 2 FimSe</p>
 
-Se (situação 1) então
-	Bloco A
+Se (situação 1) então</p>
+	Bloco A</p>
 senao
-	Se (situação 2) entao
-		Bloco B
-	senao
-		Bloco C
-	FimSe
-FimSe
+	Se (situação 2) entao</p>
+		Bloco B</p>
+	senao</p>
+		Bloco C</p>
+		Se ( situação 3) então</p>
+		Bloco D	</p>
+		FimSe</p>
+	FimSe</p>
+FimSe</p>
 
-Temos 2 condições( se ... então...senão e Se ... então ), então 2 FimSe
+Temos 3 condições( se ... então...senão, Se ... então..senao e Se...então), então 3 FimSe</p>
 
-Se (situação 1) então
-	Bloco A
-senao
-	Se (situação 2) entao
-		Bloco B
-	senao
-		Bloco C
-		Se ( situação 3) então
-		Bloco D	
-		FimSe
-	FimSe
-FimSe
+<strong>14-Função Escolha :</strong></p>
 
-Temos 3 condições( se ... então...senão, Se ... então..senao e Se...então), então 3 FimSe
+Escolha (variável)</p>
+	Caso valor</p>
+		Bloco A</p>
+	Caso valor</p>
+		Bloco B</p>
+	Caso valor</p>
+		Bloco C</p>
+	OutroCaso</p>
+		BlocoD</p>
+FimEscolha</p>
 
-14-Função Escolha :
+Função funciona somente valores inteiros !!!</p>
 
-Escolha (variável)
-	Caso valor
-		Bloco A
-	Caso valor
-		Bloco B
-	Caso valor
-		Bloco C
-	OutroCaso
-		BlocoD
-FimEscolha
+<strong>15-Estruturas de Repetição 1</strong></p>
 
-Função funciona somente valores inteiros !!!
+Exemplo 01 :</p>
+Enquanto expressão faça</p>
+	bloco</p>
+FimEnquanto</p>
 
-15-Estruturas de Repetição 1
+Exemplo 02 :</p>
 
-Exemplo 01 :
-Enquanto expressão faça
-	bloco
-FimEnquanto
+variável <- 0</p>
+Enquanto (variável <= número) faça</p>
+	Mensagem(variável)</p>
+	variável <- variável + 1</p>
+FimEnquanto</p>
 
-Exemplo 02 :
+Exemplo 03 :</p>
 
-variável <- 0
-Enquanto (variável <= número) faça
-	Mensagem(variável)
-	variável <- variável + 1
-FimEnquanto
-
-Exemplo 03 :
-
-cont <- 1
-s <- 0
-Enquanto (cont <= 10 ) faça
-	Escreval("Digite ", cont)
-	Leia(N)
-	Se ( N > maior ) então
-		maior <- N
-	FimSe
-	S <- S + N
-	cont <- cont + 1
-FimEnquanto
-</pre>
+cont <- 1</p>
+s <- 0</p>
+Enquanto (cont <= 10 ) faça</p>
+	Escreval("Digite ", cont)</p>
+	Leia(N)</p>
+	Se ( N > maior ) então</p>
+		maior <- N</p>
+	FimSe</p>
+	S <- S + N</p>
+	cont <- cont + 1</p>
+FimEnquanto</p>
+</div>
 </body>
 </html>
