--- a/Atalhos.html
+++ b/Atalhos.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+    <ul>
+        <li><a href="index.html" rel="prev">Voltar</a></li>
+    </ul>
+    
     <h1>Atalhos</h1>
 
     <p>CTRL Espaço<br>
