--- a/Curiosidades.html
+++ b/Curiosidades.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <ul>
+        <li><a href="index.html" rel="prev">Voltar</a></li>
+    </ul>
     <h1>Símbolos Especiais </h1>
     <p>Planetas : </p>
 	Marte	&#9794</p>
