--- a/Historico.html
+++ b/Historico.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <ul>
+        <li><a href="index.html" rel="prev">Voltar</a></li>
+    </ul>
     <h1>Histórico de Versões : &#x1F605;</h1> 
     <strong><p>OBS¹ : Login ainda não está funcionando, não cliquem</p></strong>
     <strong><p>OBS² : Clicando em qualquer palavra linkada o site irá abrir numa nova aba</p></strong>
